--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Marcin Ogoń",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/your/repo.git"
+    "url": "git+https://github.com/marcin-ogon/n8n-nodes-ibmi-mapepire.git"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
