--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,24 @@ jobs:
           echo "Publishing version $(node -p "require('./package.json').version")"
           npm publish
 
-      - name: Create GitHub Release (auto notes)
+      - name: Generate release notes from CHANGELOG
+        id: notes
+        run: |
+          VERSION=${GITHUB_REF_NAME#v}
+          awk -v ver="$VERSION" '
+            BEGIN{found=0}
+            /^## [0-9]+\.[0-9]+\.[0-9]+ - / {
+              if(found){exit} # we already captured the section
+              if($2==ver){found=1; next}
+            }
+            found { print }
+          ' CHANGELOG.md | sed '/^## Unreleased/,$d' | sed '/^$/N;/^\n$/D' > RELEASE_NOTES.md
+          echo "--- RELEASE NOTES ---"; cat RELEASE_NOTES.md
+          echo "notes_file=RELEASE_NOTES.md" >> $GITHUB_OUTPUT
+
+      - name: Create GitHub Release (from changelog)
         uses: softprops/action-gh-release@v2
         with:
-          generate_release_notes: true
+            body_path: RELEASE_NOTES.md
+            draft: false
+            prerelease: false
